Fixed bug with Native query in PlanningServiceImpl